[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reflex-dynoselect"
version = "0.0.1"
description = "Reflex select component which allows the user to search for options and create new ones."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.8"
authors = [{ name = "", email = "woernerm@protonmail.com" }]
keywords = ["reflex","reflex-custom-components", "select"]

dependencies = ["reflex>=0.4.6"]

classifiers = ["Development Status :: 4 - Beta"]

[project.urls]

[project.optional-dependencies]
dev = ["build", "twine"]

[tool.setuptools.packages.find]
where = ["custom_components"]