[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reflex-dynoselect"
version = "0.1.0"
description = "Generic and specialized Reflex select components. Users can search for options and create new ones. Includes specialized time zone and language select components in over 100 languages."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.8"
authors = [{ name = "Marcus Wörner", email = "woernerm@protonmail.com" }]
keywords = ["reflex","reflex-custom-components", "select", "timezone", "time zone", "locale", "language", "language select"]

dependencies = ["reflex>=0.4.6"]

classifiers = ["Development Status :: 4 - Beta"]

[project.urls]

[project.optional-dependencies]
dev = ["build", "twine"]

[tool.setuptools.packages.find]
where = ["custom_components"]